# nan

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ai.rs  cli.rs  commands.rs  error.rs  lib.rs  main.rs  migration.rs  model.rs  prompt.rs  render.rs  review.rs  store.rs
src/commands/: add.rs  cat.rs  del.rs  list.rs  mod.rs  new.rs  set.rs
tests/: cli_integration.rs  cli_stress.rs
